feat: Add tweaks to application that resolve specific browser compatibility problems.

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio | Aidan Nairn</title>
+    <meta property="og:title" content="My Digital Portfolio | Aidan Nairn" />
+    <meta property="og:description" content="Aidan Nairn is a skilled software developer that writes code as their creative outlet. They mostly work with JavaScript, TypeScript, React and NodeJS. They create applications that are user-friendly, efficient and scalable." />
+    <meta property="og:image" content="https://s3.amazonaws.com/aidannairn-media/preview.png" />
+    <meta property="og:image:alt" content="The landing screen. A computer in front of an abstract background." />
+    <title>My Digital Portfolio | Aidan Nairn</title>
   </head>
   <body>
     <div id="root"></div>
